Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 <li>Restart ISE.</li>
 <li>You will see the new submenu when click Add-Ons. Run it, a friendly UI wizard will help you generate code automatically.</li>
 </ol><p>The WMI autoscript beta is just completed.</p>
+
+<p><img src="https://cloud.githubusercontent.com/assets/8623897/4228398/c7143610-395a-11e4-8090-0192ec1e4481.png" alt="WMIAuto"></p>
         </article>
       </div>
     </div>
