Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="javascripts/script.js"></script>
 
   <title>Pshcreator</title>
-  <meta name="description" content="PowerShell Add-On to easily create and run PSH scripts in different scenarios">
+  <meta name="description" content="This is a Powershell Add-On, which is to easily create and run PSH scripts in different scenarios for IT Pros throgh UI in Powershell ISE.">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -25,7 +25,7 @@
       <h1 class="title">Pshcreator</h1>
     </header>
     <div id="container">
-      <p class="tagline">PowerShell Add-On to easily create and run PSH scripts in different scenarios</p>
+      <p class="tagline">This is a Powershell Add-On, which is to easily create and run PSH scripts in different scenarios for IT Pros throgh UI in Powershell ISE.</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
@@ -39,7 +39,7 @@
           <h1>
 <a name="pshcreator" class="anchor" href="#pshcreator"><span class="octicon octicon-link"></span></a>PSHCreator</h1>
 
-<p>Powershell Add-On is to easily create and run PSH scripts in different scenarios for IT Pros throgh UI in Powershell ISE.</p>
+<p>This is a Powershell Add-On, which is to easily create and run PSH scripts in different scenarios for IT Pros throgh UI in Powershell ISE.</p>
 
 <p>Plan to include WMI autoscript, AZure query and deployment scenarios.</p>
 
@@ -51,7 +51,7 @@
 <li>Copy the code, for example, WMIAutoCode_AddOn.ps1 into the Microsoft.PowerShellISE_profile.ps1 file. Save it.</li>
 <li>Restart ISE.</li>
 <li>You will see the new submenu when click Add-Ons. Run it, a friendly UI wizard will help you generate code automatically.</li>
-</ol><p>The WMI autoscript beta is just completed.</p>
+</ol><p>The WMI autoscript function is just completed.</p>
 
 <p><img src="https://cloud.githubusercontent.com/assets/8623897/4228398/c7143610-395a-11e4-8090-0192ec1e4481.png" alt="WMIAuto"></p>
         </article>
